--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
         <!-- Service -->
 
-        <div id="services" class="section">
+        <!-- <div id="services" class="section">
             <div class="block content-1170 center-relative">
                 <div class="section-title-holder left">
                     <div class="section-num">
@@ -308,7 +308,7 @@
                 </div>
                 <div class='clear'></div>
             </div>
-        </div>
+        </div> -->
 
 
         <!-- Portfolio -->
@@ -339,14 +339,14 @@
                         </div>
                         <div class="grid-item element-item p_one_half">
                             <a href="single-portfolio2.html">
-                                <img src="demo-images/portfolio_item_02.jpg" alt="">
+                                <img src="images/coffee_thumb.jpg" alt="">
                                 <div class="portfolio-text-holder">
                                     <div class="portfolio-text-wrapper">
                                         <p class="portfolio-type">
                                             <img src="images/icon_post.svg" alt="">
                                         </p>
-                                        <p class="portfolio-text">PSD MOCKUP</p>
-                                        <p class="portfolio-sec-text">Smart Watch</p>
+                                        <p class="portfolio-text">FRONT-END DEVELOPMENT</p>
+                                        <p class="portfolio-sec-text">Coffee Shop Locator</p>
                                     </div>
                                 </div>
                             </a>
