--- a/single-portfolio2.html
+++ b/single-portfolio2.html
@@ -84,22 +84,22 @@
                         <br>
                         <div class="one_half text-right">
                             <p>
-                                <span style="color: #adadad;">Project Name:</span> Handmade<br>
-                                <span style="color: #adadad;">Client:</span> Est Lorem<br>
-                                <span style="color: #adadad;">Year:</span> 2017
+                                <span style="color: #adadad;">Project Name:</span> Coffee Shop Locator<br>
+                                <!-- <span style="color: #adadad;">Client:</span> Est Lorem<br> -->
+                                <span style="color: #adadad;">Timeframe:</span> December 2017
                             </p>
                             <br>
                             <br>
                             <div class="text-right">
-                                <a href="#" target="_self" class="button ">Download</a>
+                                <a href="http://jackmolloydesign.com/mj487/final/" target="_blank" class="button ">Visit Site</a>
                             </div>
                         </div>
                         <div class="one_half last ">
-                            <h1>Handmade for Everyone</h1>
-                            <p>We choose to go to the moon in this decade and do the other things, not because they are easy.</p>
+                            <h1>Leveraging APIs for the Sake of Coffee</h1>
+                            <p>For this project, I was tasked to create an interactive experience using dynamic data from multiple APIs. I decided to map out every place that sells coffee in <a href="https://www.visitnc.com/raleigh-durham-the-triangle" target="_blank">The Triangle</a> using the Google Maps API. I then used the Google Places API to populate info windows containing ratings, reviews and contact information about each place.</p>
                             <br>
                             <p>
-                                Because they are hard, because that goal will serve to organize and measure the best of our energies and skills, because that challenge is one that we are willing to accept, one we are unwilling to postpone and one.<br>
+                                Through this project I was blown away by the power of APIs. For example, my intention was to map out every spot that sells coffee within a 30-mile radius of NC's Research Triangle. After I finished the project I realized the radius function I wrote was broken, so the online app actually maps out and provides information on every place that sells coffee in the <span class="italics strong">WORLD</span>. I was so amazed that I decided to leave it that way. So go ahead, visit the site and see if you can find your favorite coffee shop near you!<br>
                             </p>
                         </div>
                         <div class="clear"></div>
