--- a/single-portfolio2.html
+++ b/single-portfolio2.html
@@ -70,9 +70,9 @@
                             <a id="aboutImage_next" class="image_slider_next" href="#"></a>
                             <div class="caroufredsel_wrapper">
                                 <ul id="aboutImage" class="image-slider slides">
-                                    <li><img src="demo-images/about_img_04.jpg" alt=""></li>
-                                    <li><img src="demo-images/about_img_05.jpg" alt=""></li>
-                                    <li><img src="demo-images/about_img_06.jpg" alt=""></li>
+                                    <li><img src="images/coffee_app_showcase2.jpg" alt=""></li>
+                                    <!-- <li><img src="demo-images/about_img_05.jpg" alt=""></li>
+                                    <li><img src="demo-images/about_img_06.jpg" alt=""></li> -->
                                 </ul>
                             </div>
                             <div class="clear"></div>
