--- a/index.html
+++ b/index.html
@@ -352,6 +352,20 @@
                             </a>
                         </div>
                         <div class="grid-item element-item p_one_half">
+                            <a href="single-portfolio3.html">
+                                <img src="images/brochure_thumb.jpg" alt="">
+                                <div class="portfolio-text-holder">
+                                    <div class="portfolio-text-wrapper">
+                                        <p class="portfolio-type">
+                                            <img src="images/icon_post.svg" alt="">
+                                        </p>
+                                        <p class="portfolio-text">GRAPHIC DESIGN</p>
+                                        <p class="portfolio-sec-text">USI Brochure</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="grid-item element-item p_one_half">
                             <a data-rel="prettyPhoto[gallery1]" href="demo-images/portfolio_item_08.jpg">
                                 <img src="demo-images/portfolio_item_08.jpg" alt="">
                                 <div class="portfolio-text-holder">
