--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                         </div>
                         <div class="grid-item element-item p_one_half">
                             <a href="single-portfolio3.html">
-                                <img src="images/brochure_thumb.jpg" alt="">
+                                <img src="images/broch_thumb2.jpg" alt="">
                                 <div class="portfolio-text-holder">
                                     <div class="portfolio-text-wrapper">
                                         <p class="portfolio-type">
