almost done with desktop

--- a/single-portfolio4.html
+++ b/single-portfolio4.html
@@ -62,11 +62,11 @@
                         </a>
 
                         <div class="one margin-0">
-                            <img src="images/ces_sm_thumb.png" alt="">
+                            <img src="images/cal_thumb_main.png" alt="">
                         </div>
                         <div class="clear"></div>
                         <div class="one margin-0">
-                            <img src="images/goal_slide2.png" alt="">
+                            <img src="images/cal3.png" alt="">
                         </div>
                         <!-- <div class="one_half last margin-0">
                             <img src="demo-images/item_img_03.jpg" alt="">
@@ -78,27 +78,24 @@
 
                         <div class="one_half text-right">
                             <p>
-                                <span style="color: #adadad;">Project Name:</span> @UNCeship Social Media Strategy<br>
-                                <span style="color: #adadad;">Client:</span> UNC Kenan-Flagler Center for Entrepreneurship<br>
-                                <span style="color: #adadad;">Year:</span> Dec. 2017 - Dec. 2018
+                                <span style="color: #adadad;">Project Name:</span> UC-Berkeley vs. The Pros<br>
+                                <span style="color: #adadad;">Client:</span> Cal Bears Sports Properties | Learfield<br>
+                                <span style="color: #adadad;">Year:</span> Summer 2017
                             </p>
                            <br>
                            <br>
                             <div class="text-right">
-                                <a href="https://drive.google.com/file/d/1wXDcQTLgp0k7oxczF1ffM3SavYwJoG5g/view?usp=sharing" target="_blank" class="button ">View Entire Project</a>
+                                <a href="https://drive.google.com/file/d/0B-4jRj13LFZuVEZmWmFCNVBySjA/view?usp=sharing" target="_blank" class="button ">View PDF</a>
                             </div>
                         </div>
                         <div class="one_half last ">
-                            <h1>Creating Social Strategy for a Top-10 Program</h1>
-                            <p>As a marketing intern for UNC's Entrepreneurship Center, I was tasked to create a social media strategy to be implemented through the program's Twitter page in 2018. Because the Center had never developed a social media strategy before, I was given free reign to figure it out as I went, learning best practices and weaving them into the strategy as much as possible.</p>
+                            <h1>Data-Driven Market Comparison</h1>
+                            <p>During my internship at Learfield, a leading sports marketing firm in the country, I worked on the digital team as a support assistant. For the first four weeks, I was taught how to use a social analytics tool called Crowdtangle. From then on, I leveraged that tool to provide my colleagues with the data, specifically engagement rates, to either support or change their narrative.</p>
                             <br>
                             <p>
-                                A big part of this project was casting long-term visions and creating the short-term goals necessary to get there. I am naturally a big-picture guy, so leveraging that mindset to develop measurable objectives truly excited me. The strategy ended with a proposal to begin using an online social media tool, which was adopted shortly after the pitch was given.<br>
+                                These slides were distributed to the sales team at the University of California-Berkeley to attract more sponsorships and increase their valuation of ad-space by showing higher social media engagement rates than professional teams in the same market. As a storyteller, I loved getting the chance to visualize the data I spent so long analyzing; all numbers are telling a story, it's our job to pay attention and connect the dots. I got to do that through this project, and I am proud of the result.<br>
                             </p>
                             <br>
-                            <p>
-                              From a design perspective, I am very proud of the presentation I put together for this proposal. Though they are not perfect, each slide accurately displays the necessary information, with details that add value to the message being presented. Being able to design visuals that further a message rather than simply supporting it helped me greatly in this project, and I am excited to continue to sharpen that skillset as I advance my career.
-                            </p>
                         </div>
                         <div class="clear"></div>
                     </div>
