orbit in progress

--- a/index.html
+++ b/index.html
@@ -59,10 +59,33 @@
             <div class="block ">
                 <!-- <img class="top-logo" src="images/final_logo_white.png" alt="Boxus" /> -->
                 <br>
-                <div class="block content-1170 center-relative">
-                  <div class="section-title-holder section-title-holder-logo right">
-                  <img src="images/jack_logo2.png" alt="">
-                </div>
+                <div class="block content-1170 center-relative orbit-main">
+                  <!-- <div class="section-title-holder section-title-holder-logo right"> -->
+
+                    <!-- https://codepen.io/alandunning/pen/bNNRvQ -->
+                    <div id="circle-orbit-container">
+
+                      <!-- Circles closest to the central point -->
+                      <div id="inner-orbit-bg">
+                        <div id="inner-orbit">
+                        <div class="inner-orbit-cirlces"></div>
+                        </div>
+                      </div>
+
+                      <!-- Circles second closest to the central point -->
+                      <div id="middle-orbit">
+                        <div class="middle-orbit-cirlces"></div>
+                      </div>
+
+                      <!-- Circles furthest away to the central point -->
+                      <div id="outer-orbit">
+                        <div class="outer-orbit-cirlces"></div>
+                      </div>
+
+                  </div>
+
+                  <!-- <img src="images/jack_logo2.png" alt=""> -->
+                <!-- </div> -->
                 <!-- <div class="section-title-holder right">
                     <div class="section-num">
                         <span>01</span>
