--- a/index.html
+++ b/index.html
@@ -59,18 +59,18 @@
             <div class="block ">
                 <!-- <img class="top-logo" src="images/final_logo_white.png" alt="Boxus" /> -->
                 <br>
-                <div class="block content-1170 center-relative orbit-main">
+                <div class="block content-1170 center-relative ">
                   <!-- <div class="section-title-holder section-title-holder-logo right"> -->
 
                     <!-- https://codepen.io/alandunning/pen/bNNRvQ -->
                     <div id="circle-orbit-container">
 
                       <!-- Circles closest to the central point -->
-                      <div id="inner-orbit-bg">
+                      <!-- <div id="inner-orbit-bg"> -->
                         <div id="inner-orbit">
                         <div class="inner-orbit-cirlces"></div>
                         </div>
-                      </div>
+                      <!-- </div> -->
 
                       <!-- Circles second closest to the central point -->
                       <div id="middle-orbit">
@@ -80,6 +80,7 @@
                       <!-- Circles furthest away to the central point -->
                       <div id="outer-orbit">
                         <div class="outer-orbit-cirlces"></div>
+                        <div class="outer-orbit-cirlces-2"></div>
                       </div>
 
                   </div>
