another orbit commit

--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
                       <!-- Circles furthest away to the central point -->
                       <div id="outer-orbit">
                         <div class="outer-orbit-cirlces"></div>
-                        <div class="outer-orbit-cirlces-2"></div>
+                        <div class="outer-orbit-cirlces-2">
+                          <div class="mytextwithicon"></div>
+                        </div>
                       </div>
 
                   </div>
