orbit done for now

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                 <div class="mob-menu">MENU</div>
                 <ul class="main-menu sm sm-clean">
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#services">Services</a></li>
+                    <!-- <li><a href="#services">Services</a></li> -->
+                    <li><a href="#aboutMe">About</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#news">News</a></li>
+                    <!-- <li><a href="#news">News</a></li>
                     <li><a href="#video">Video</a></li>
-                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#skills">Skills</a></li> -->
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -69,21 +69,37 @@
                       <!-- <div id="inner-orbit-bg"> -->
                         <div id="inner-orbit">
                         <div class="inner-orbit-cirlces"></div>
+                        <div class="inner-orbit-cirlces-2"></div>
+                        <div class="inner-orbit-cirlces-5"></div>
+                        <!-- <div class="inner-orbit-cirlces-2"></div> -->
                         </div>
                       <!-- </div> -->
 
                       <!-- Circles second closest to the central point -->
                       <div id="middle-orbit">
-                        <div class="middle-orbit-cirlces"></div>
+                        <!-- <div class="middle-orbit-cirlces"></div> -->
+                        <div class="inner-orbit-cirlces-3"></div>
+                        <div class="inner-orbit-cirlces-4"></div>
                       </div>
 
                       <!-- Circles furthest away to the central point -->
                       <div id="outer-orbit">
-                        <div class="outer-orbit-cirlces"></div>
+                        <!-- <div class="outer-orbit-cirlces"></div> -->
                         <div class="outer-orbit-cirlces-2">
                           <div class="mytextwithicon"></div>
                         </div>
+                        <div class="outer-orbit-cirlces-3">
+                          <div class="mytextwithicon-2"></div>
+                        </div>
+                        <div class="outer-orbit-cirlces-4">
+                          <div class="mytextwithicon-3"></div>
+                        </div>
+                        <div class="outer-orbit-cirlces-5">
+                          <div class="mytextwithicon-4"></div>
+                        </div>
                       </div>
+
+
 
                   </div>
 
@@ -362,7 +378,7 @@
                         <div class="grid-sizer"></div>
                         <div class="grid-item element-item p_one">
                             <a href="single-portfolio.html">
-                                <img src="images/ces_sm_thumb_main5.png" alt="">
+                                <img src="images/ces_sm_thumb_simple.jpg" alt="">
                                 <div class="portfolio-text-holder">
                                     <div class="portfolio-text-wrapper">
                                         <p class="portfolio-type">
