--- a/index.html
+++ b/index.html
@@ -67,20 +67,21 @@
 
                       <!-- Circles closest to the central point -->
                       <!-- <div id="inner-orbit-bg"> -->
-                        <div id="inner-orbit">
+                        <!-- <div id="inner-orbit">
                         <div class="inner-orbit-cirlces"></div>
                         <div class="inner-orbit-cirlces-2"></div>
                         <div class="inner-orbit-cirlces-5"></div>
-                        <!-- <div class="inner-orbit-cirlces-2"></div> -->
-                        </div>
+                        <div class="inner-orbit-cirlces-3"></div>
+                        <div class="inner-orbit-cirlces-4"></div>
+                        </div> -->
                       <!-- </div> -->
 
                       <!-- Circles second closest to the central point -->
-                      <div id="middle-orbit">
-                        <!-- <div class="middle-orbit-cirlces"></div> -->
+                      <!-- <div id="middle-orbit">
+                        <div class="middle-orbit-cirlces"></div>
                         <div class="inner-orbit-cirlces-3"></div>
                         <div class="inner-orbit-cirlces-4"></div>
-                      </div>
+                      </div> -->
 
                       <!-- Circles furthest away to the central point -->
                       <div id="outer-orbit">
@@ -99,7 +100,9 @@
                         </div>
                       </div>
 
-
+                      <!-- <div class="blurb">
+                        <h2>Creative Decision-Maker</h2>
+                      </div> -->
 
                   </div>
 
@@ -420,14 +423,14 @@
                         </div>
                         <div class="grid-item element-item p_one">
                             <a href="single-portfolio4.html">
-                                <img src="images/cal_thumb_main.png" alt="">
+                                <img src="images/cal_thumb_simple.jpg" alt="">
                                 <div class="portfolio-text-holder">
                                     <div class="portfolio-text-wrapper">
                                         <p class="portfolio-type">
                                             <img src="images/icon_post.svg" alt="">
                                         </p>
                                         <p class="portfolio-text">MARKETING</p>
-                                        <p class="portfolio-sec-text">UC-Berkeley vs. The Pros</p>
+                                        <p class="portfolio-sec-text">Cal vs. The Pros</p>
                                     </div>
                                 </div>
                             </a>
