working to responsive

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" type="text/css"  href='css/prettyPhoto.css' />
         <link rel="stylesheet" type="text/css"  href='css/sm-clean.css' />
         <link rel="stylesheet" type="text/css"  href='style.css' />
+        <link rel='stylesheet' media='screen and (max-width: 1190px)' href='style-mobile.css' />
 
         <!--[if lt IE 9]>
                 <script src="js/html5.js"></script>
@@ -54,6 +55,7 @@
 
 
         <!-- Home -->
+<div class="mobile-body">
 
         <div id="home" class="section intro-page">
             <div class="block ">
@@ -381,7 +383,7 @@
                         <div class="grid-sizer"></div>
                         <div class="grid-item element-item p_one">
                             <a href="single-portfolio.html">
-                                <img src="images/ces_sm_thumb_simple.jpg" alt="">
+                                <img src="images/ces_sm_thumb_simple_blu.jpg" alt="">
                                 <div class="portfolio-text-holder">
                                     <div class="portfolio-text-wrapper">
                                         <p class="portfolio-type">
@@ -409,7 +411,7 @@
                         </div>
                         <div class="grid-item element-item p_one_half">
                             <a href="single-portfolio3.html">
-                                <img src="images/broch_thumb3.jpg" alt="">
+                                <img src="images/broch_thumb5.jpg" alt="">
                                 <div class="portfolio-text-holder">
                                     <div class="portfolio-text-wrapper">
                                         <p class="portfolio-type">
@@ -892,6 +894,9 @@
                 <div class="clear"></div>
             </div>
         </div> -->
+
+
+      </div>
 
         <!-- Footer -->
 
