--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
         </div>
 
 
+
         <!-- Who I Am -->
         <div id="aboutMe" class="section">
             <div class="block content-1170 center-relative">
@@ -136,10 +137,13 @@
                         <div class="content-title-holder">
                             <p class="content-title">Jack</p>
                         </div>
+                        <div class="mobile-container">
+
                         <div class="one_half ">
                           As a designer with a passion for entrepreneurship, I leverage design to help scale businesses. I utilize <strong>marketing</strong>, <strong>graphic design</strong> and <strong>front-end development</strong> to solve problems, tell stories and create experiences.
                         </div>
-                        <div class="one_half last ">
+                      </div>
+                        <div class="one_half last mobile-hide">
 
                           <div class="progress_bar ">
                               <div class="progress_bar_field_holder" style="width:88%;">
@@ -208,9 +212,9 @@
                             <div class="caroufredsel_wrapper">
                                 <ul id="team1" class="image-slider slides">
                                     <li>
-                                        <div class="member-content-holder">
+                                        <div class="member-content-holder mobile-container">
                                             <!-- <h4 class="member-name">Jack Molloy</h4> -->
-                                            <p class="member-position">WHO I AM</p>
+                                            <p class="member-position mobile-center">WHO I AM</p>
                                             <div class="member-content">
                                               I’m an "ideas guy" who is working to develop the technical skills needed to make my thoughts tangible. Post-it Notes, pour-over coffee, and face-to-face interaction are my love languages. I'm not married to any particular industry or career path. Instead, I want to be surrounded by talented people who are willing and able to teach me how to best reach my entrepreneurial potential.<br>
                                             </div>
