--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <!-- <li><a href="#news">News</a></li>
                     <li><a href="#video">Video</a></li>
                     <li><a href="#skills">Skills</a></li> -->
-                    <li><a href="#contact">Contact</a></li>
+                    <!-- <li><a href="#contact">Contact</a></li> -->
                 </ul>
             </nav>
         </div>
@@ -56,12 +56,13 @@
 
         <!-- Home -->
 <div class="mobile-body">
+  <div class="no-mob">
 
         <div id="home" class="section intro-page">
             <div class="block ">
                 <!-- <img class="top-logo" src="images/final_logo_white.png" alt="Boxus" /> -->
                 <br>
-                <div class="block content-1170 center-relative ">
+                <div class="block content-1170 center-relative">
                   <!-- <div class="section-title-holder section-title-holder-logo right"> -->
 
                     <!-- https://codepen.io/alandunning/pen/bNNRvQ -->
@@ -88,18 +89,33 @@
                       <!-- Circles furthest away to the central point -->
                       <div id="outer-orbit">
                         <!-- <div class="outer-orbit-cirlces"></div> -->
-                        <div class="outer-orbit-cirlces-2">
-                          <div class="mytextwithicon"></div>
+                        <div class="outer-orbit-cirlces-2 no-mob">
+                          <div class="mytextwithicon no-mob"></div>
                         </div>
-                        <div class="outer-orbit-cirlces-3">
-                          <div class="mytextwithicon-2"></div>
+                        <div class="outer-orbit-cirlces-3 no-mob">
+                          <div class="mytextwithicon-2 no-mob"></div>
                         </div>
-                        <div class="outer-orbit-cirlces-4">
-                          <div class="mytextwithicon-3"></div>
+                        <div class="outer-orbit-cirlces-4 no-mob">
+                          <div class="mytextwithicon-3 no-mob"></div>
                         </div>
-                        <div class="outer-orbit-cirlces-5">
-                          <div class="mytextwithicon-4"></div>
+                        <div class="outer-orbit-cirlces-5 no-mob">
+                          <div class="mytextwithicon-4 no-mob"></div>
                         </div>
+
+                        <div class="top-footer center-relative">
+                          <div class="foot-wrapper">
+                            <ul>
+                                <li class="social-footer top-footer">
+                                  <a href="https://www.linkedin.com/in/jackwmolloy/" target="_blank"><span class="fa fa-linkedin"></span></a>
+                                  <a href="https://www.facebook.com/jackwmolloy" target="_blank"><span class="fa fa-facebook"></span></a>
+                                  <a href="https://twitter.com/YaBoyMolloy" target="_blank"><span class="fa fa-twitter"></span></a>
+                                  <a href="https://medium.com/@jackwmolloy" target="_blank"><span class="fa fa-medium"></span></a>
+                              </li>
+                                </li>
+                            </ul>
+                          </div>
+                        </div>
+
                       </div>
 
                       <!-- <div class="blurb">
@@ -126,7 +142,7 @@
         <!-- Who I Am -->
         <div id="aboutMe" class="section">
             <div class="block content-1170 center-relative">
-                <div class="section-title-holder left">
+                <div class="section-title-holder left no-mob">
                     <div class="section-num">
                         <span>01</span>
                     </div>
@@ -137,9 +153,9 @@
                         <div class="content-title-holder">
                             <p class="content-title">Jack</p>
                         </div>
-                        <div class="mobile-container">
+                        <div class="member-content-holder2 mobile-container2">
 
-                        <div class="one_half ">
+                        <div class="one_half member-content2 mobile-member2">
                           As a designer with a passion for entrepreneurship, I leverage design to help scale businesses. I utilize <strong>marketing</strong>, <strong>graphic design</strong> and <strong>front-end development</strong> to solve problems, tell stories and create experiences.
                         </div>
                       </div>
@@ -215,7 +231,7 @@
                                         <div class="member-content-holder mobile-container">
                                             <!-- <h4 class="member-name">Jack Molloy</h4> -->
                                             <p class="member-position mobile-center">WHO I AM</p>
-                                            <div class="member-content">
+                                            <div class="member-content mobile-member">
                                               I’m an "ideas guy" who is working to develop the technical skills needed to make my thoughts tangible. Post-it Notes, pour-over coffee, and face-to-face interaction are my love languages. I'm not married to any particular industry or career path. Instead, I want to be surrounded by talented people who are willing and able to teach me how to best reach my entrepreneurial potential.<br>
                                             </div>
                                         </div>
@@ -376,7 +392,7 @@
         <!-- Portfolio -->
         <div id="portfolio" class="section">
             <div class="block content-1170 center-relative">
-                <div class="section-title-holder right">
+                <div class="section-title-holder right no-mob">
                     <div class="section-num">
                         <span>02</span>
                     </div>
@@ -415,7 +431,7 @@
                         </div>
                         <div class="grid-item element-item p_one_half">
                             <a href="single-portfolio3.html">
-                                <img src="images/broch_thumb5.jpg" alt="">
+                                <img src="images/new_broch_thumb.jpg" alt="">
                                 <div class="portfolio-text-holder">
                                     <div class="portfolio-text-wrapper">
                                         <p class="portfolio-type">
@@ -902,6 +918,8 @@
 
       </div>
 
+
+
         <!-- Footer -->
 
         <footer>
@@ -911,15 +929,30 @@
                         © 2018 All rights reserved. | Boxus Template by <a href="https://colorlib.com" target="_blank">Colorlib</a>
                     </li>
                     <li class="social-footer">
-                        <a href="#"><span class="fa fa-twitter"></span></a>
-                        <a href="#"><span class="fa fa-behance"></span></a>
-                        <a href="#"><span class="fa fa-dribbble"></span></a>
-                        <a href="#"><span class="fa fa-facebook"></span></a>
-                        <a href="#"><span class="fa fa-rss"></span></a>
+                      <a href="https://www.linkedin.com/in/jackwmolloy/" target="_blank"><span class="fa fa-linkedin"></span></a>
+                      <a href="https://www.facebook.com/jackwmolloy" target="_blank"><span class="fa fa-facebook"></span></a>
+                      <a href="https://twitter.com/YaBoyMolloy" target="_blank"><span class="fa fa-twitter"></span></a>
+                      <a href="https://medium.com/@jackwmolloy" target="_blank"><span class="fa fa-medium"></span></a>
+                  </li>
                     </li>
                 </ul>
             </div>
         </footer>
+
+      </div>
+      <div class="only-mob mob-splash">
+        <h1 class="splash-text">Mobile Version Coming Soon!</h1>
+        <div class="footer">
+        <ul>
+            <li class="social-footer">
+              <a href="https://www.linkedin.com/in/jackwmolloy/" target="_blank"><span class="fa fa-linkedin"></span></a>
+              <a href="https://www.facebook.com/jackwmolloy" target="_blank"><span class="fa fa-facebook"></span></a>
+              <a href="https://twitter.com/YaBoyMolloy" target="_blank"><span class="fa fa-twitter"></span></a>
+              <a href="https://medium.com/@jackwmolloy" target="_blank"><span class="fa fa-medium"></span></a>
+          </li>
+        </ul>
+      </div>
+      </div>
 
 
         <!--Load JavaScript-->
@@ -936,5 +969,6 @@
         <script type='text/javascript' src='js/imagesloaded.pkgd.js'></script>
         <script type='text/javascript' src='js/jquery.prettyPhoto.js'></script>
         <script type='text/javascript' src='js/main.js'></script>
+
     </body>
 </html>
