--- a/single-portfolio2.html
+++ b/single-portfolio2.html
@@ -119,10 +119,9 @@
                         </li>
                         <li class="social-footer">
                             <a href="#"><span class="fa fa-twitter"></span></a>
-                            <a href="#"><span class="fa fa-behance"></span></a>
-                            <a href="#"><span class="fa fa-dribbble"></span></a>
+                            <a href="#"><span class="fa fa-linkedin"></span></a>
                             <a href="#"><span class="fa fa-facebook"></span></a>
-                            <a href="#"><span class="fa fa-rss"></span></a>
+                            <a href="#"><span class="fa fa-medium"></span></a>
                         </li>
                     </ul>
                 </div>
